--- a/app/pom.xml
+++ b/app/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
-            <artifactId>scala3-library_3</artifactId>
+            <artifactId>scala-library</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -29,11 +29,11 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_3</artifactId>
+            <artifactId>scalatest_${scala.major.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scalacheck</groupId>
-            <artifactId>scalacheck_3</artifactId>
+            <artifactId>scalacheck_${scala.major.version}</artifactId>
         </dependency>
     </dependencies>
     <build>
