--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
         <revision>21.3.0</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.major.version>3.0</scala.major.version>
-        <scala.version>${scala.major.version}.0</scala.version>
+        <scala.major.version>2.13</scala.major.version>
+        <scala.version>${scala.major.version}.6</scala.version>
         <openjfx.version>17-ea+9</openjfx.version>
         <gluonfx.plugin.version>1.0.1</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
@@ -28,7 +28,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.scala-lang</groupId>
-                <artifactId>scala3-library_3</artifactId>
+                <artifactId>scala-library</artifactId>
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
@@ -48,20 +48,20 @@
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_3</artifactId>
-                <version>3.2.9</version>
+                <artifactId>scalatest_${scala.major.version}</artifactId>
+                <version>3.2.3</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scalatestplus</groupId>
-                <artifactId>scalacheck-1-15_3</artifactId>
-                <version>3.2.9.0</version>
+                <artifactId>scalacheck-1-14_${scala.major.version}</artifactId>
+                <version>3.2.3.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.scalacheck</groupId>
-                <artifactId>scalacheck_3</artifactId>
-                <version>1.15.4</version>
+                <artifactId>scalacheck_${scala.major.version}</artifactId>
+                <version>1.15.2</version>
                 <scope>test</scope>
             </dependency>
 
@@ -78,7 +78,7 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>4.5.3</version>
+                    <version>4.4.0</version>
                     <executions>
                         <execution>
                             <goals>
