#36: introduces docs submodule, moves IconCreator

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <modules>
         <module>app</module>
         <module>dist</module>
+        <module>docs</module>
     </modules>
 
     <dependencyManagement>
