--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>logorrr</artifactId>
         <version>${revision}${changelist}</version>
     </parent>
-    <artifactId>app</artifactId>
-    <name>app.logorrr.app</name>
+    <artifactId>docs</artifactId>
+    <name>app.logorrr.docs</name>
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -20,8 +20,16 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
+            <groupId>app.logorrr</groupId>
+            <artifactId>app</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
