--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,11 @@
     <description>LogoRRR - the log visualisation tool</description>
     <packaging>pom</packaging>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <revision>21.3.2</revision>
         <changelist>-SNAPSHOT</changelist>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.7</scala.version>
         <openjfx.version>18-ea+7</openjfx.version>
@@ -19,6 +21,9 @@
         <main.class>app.logorrr.LogoRRRApp</main.class>
         <main.launcher.class>app.logorrr.LogoRRRAppLauncher</main.launcher.class>
         <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
+        <!-- settings for x64 and aarch64 builds on mac, can be ignored for other platforms -->
+        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/18.ea.25-open</osx.jdk.home.aarch64>
+        <osx.jdk.home.x64>/Library/Java/JavaVirtualMachines/jdk-18+26/Contents/Home</osx.jdk.home.x64>
     </properties>
 
     <profiles>
@@ -31,25 +36,52 @@
             </activation>
             <properties>
                 <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.2.0</graalvm.home>
-                <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer 18.4\bin\x86\AdvancedInstaller.com</advanced.installer.compiler>
+                <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer
+                    18.4\bin\x86\AdvancedInstaller.com
+                </advanced.installer.compiler>
             </properties>
         </profile>
         <profile>
             <id>OS.osx</id>
             <activation>
                 <os>
-                    <family>unix</family>
-                    <name>Mac OS X</name>
+                    <name>mac os x</name>
                 </os>
             </activation>
             <properties>
                 <graalvm.home>/Users/lad/.sdkman/candidates/java/21.2.0.r11-grl</graalvm.home>
-                <!-- for creating macOsX installer we need java 16 (jpackager)-->
-                <jdk.home>/Users/lad/.sdkman/candidates/java/18.ea.25-open</jdk.home>
+                <jdk.home>/will/be/set/in/profiles</jdk.home>
                 <jdk.jlink.binary>${jdk.home}/bin/jlink</jdk.jlink.binary>
                 <jdk.jpackage.binary>${jdk.home}/bin/jpackage</jdk.jpackage.binary>
                 <mac.codesign.binary>/usr/bin/codesign</mac.codesign.binary>
                 <mac.productsign.binary>/usr/bin/productsign</mac.productsign.binary>
+            </properties>
+        </profile>
+        <profile>
+            <id>OS.osx.arm64</id>
+            <activation>
+                <os>
+                    <name>mac os x</name>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <!-- must point to a aarch64 sdk -->
+                <jdk.home>${osx.jdk.home.aarch64}</jdk.home>
+            </properties>
+
+        </profile>
+        <profile>
+            <id>OS.osx.x64</id>
+            <activation>
+                <os>
+                    <name>mac os x</name>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <!-- must point to a x64 jdk installation -->
+                <jdk.home>${osx.jdk.home.x64}</jdk.home>
             </properties>
         </profile>
     </profiles>
@@ -281,6 +313,7 @@
                                         </message>
                                     </requireJavaVersion>
                                 </rules>
+                                <fail>true</fail>
                             </configuration>
                         </execution>
                     </executions>
@@ -294,6 +327,11 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.soebes.maven.plugins</groupId>
+                    <artifactId>maven-echo-plugin</artifactId>
+                    <version>0.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
