#13: implements a persisting mechanism for preferences, proof of concept

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -20,8 +20,8 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>config</artifactId>
+            <groupId>com.github.pureconfig</groupId>
+            <artifactId>pureconfig_${scala.major.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -37,6 +37,23 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>app/**</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>application.conf</include>
+                    <include>meta.conf</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
