--- a/pom.xml
+++ b/pom.xml
@@ -114,9 +114,9 @@
                 <version>2.8.0</version>
             </dependency>
             <dependency>
-                <groupId>com.typesafe</groupId>
-                <artifactId>config</artifactId>
-                <version>1.4.1</version>
+                <groupId>com.github.pureconfig</groupId>
+                <artifactId>pureconfig_${scala.major.version}</artifactId>
+                <version>0.17.1</version>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
