--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -3,7 +3,7 @@
   "recent-files": {
     # recently opened files. on app startup it will be checked if paths still exist.
     # if yes, opens file, if not entry will be deleted
-    "files": []
+    "log-report-definition": []
   },
   # settings to display log entries
   "square-image-settings": {
