--- a/app/pom.xml
+++ b/app/pom.xml
@@ -22,6 +22,8 @@
         <dependency>
             <groupId>com.github.pureconfig</groupId>
             <artifactId>pureconfig_${scala.major.version}</artifactId>
+            <!-- comment scope if you want to start app in intellij
+            -->
             <scope>provided</scope>
         </dependency>
         <dependency>
