--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
                 </os>
             </activation>
             <properties>
+                <!-- graalvm.home>C:\Program Files\Java\graalvm-ce-java11-22.0.0.2</graalvm.home -->
                 <graalvm.home>C:\Program Files\Java\graalvm-ce-java11-21.3.0</graalvm.home>
                 <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer 18.4\bin\x86\AdvancedInstaller.com</advanced.installer.compiler>
             </properties>
