--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.8</scala.version>
         <openjfx.version>18-ea+10</openjfx.version>
-        <gluonfx.plugin.version>1.0.11</gluonfx.plugin.version>
+        <gluonfx.plugin.version>1.0.12</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <main.class>app.logorrr.LogoRRRApp</main.class>
         <main.launcher.class>app.logorrr.LogoRRRAppLauncher</main.launcher.class>
@@ -164,6 +164,16 @@
     <build>
         <pluginManagement>
             <plugins>
+                <!-- to make intellij idea happy -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.0</version>
+                    <configuration>
+                        <source>8</source>
+                        <target>8</target>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
