--- a/app/pom.xml
+++ b/app/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.scalacheck</groupId>
             <artifactId>scalacheck_${scala.major.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.scalatestplus</groupId>
+            <artifactId>scalacheck-1-15_${scala.major.version}</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
