--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,14 @@
 
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.8</scala.version>
-        <openjfx.version>18-ea+10</openjfx.version>
+        <openjfx.version>18</openjfx.version>
         <gluonfx.plugin.version>1.0.12</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <main.class>app.logorrr.LogoRRRApp</main.class>
         <main.launcher.class>app.logorrr.LogoRRRAppLauncher</main.launcher.class>
         <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
         <!-- settings for x64 and aarch64 builds on mac, can be ignored for other platforms -->
-        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/18.ea.35-open</osx.jdk.home.aarch64>
+        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/18-open</osx.jdk.home.aarch64>
         <osx.jdk.home.x64>/Users/lad/.sdkman/candidates/java/18.ea.31-open</osx.jdk.home.x64>
     </properties>
 
@@ -129,7 +129,7 @@
             </dependency>
             <dependency>
                 <groupId>org.scalatestplus</groupId>
-                <artifactId>scalacheck-1-14_${scala.major.version}</artifactId>
+                <artifactId>scalacheck-1-15_${scala.major.version}</artifactId>
                 <version>3.2.11.0</version>
                 <scope>test</scope>
             </dependency>
