--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -6,7 +6,7 @@
     "log-file-definitions": {}
   },
   # settings to display log entries
-  "square-image-settings": {
+  "block-settings": {
     # width in pixels for square which symbolizes a log entry
     "width": 7
   },
@@ -14,7 +14,7 @@
   "stage-settings": {
     # height of application
     "height": 600,
-    # witdh of application
+    # width of application
     "width": 1000,
     # x coordinate for upper left corner of application
     "x": 0,
