--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,15 @@
 
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.8</scala.version>
-        <openjfx.version>18</openjfx.version>
-        <gluonfx.plugin.version>1.0.12</gluonfx.plugin.version>
+        <openjfx.version>19-ea+6</openjfx.version>
+        <gluonfx.plugin.version>1.0.13</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <main.class>app.logorrr.LogoRRRApp</main.class>
         <main.launcher.class>app.logorrr.LogoRRRAppLauncher</main.launcher.class>
         <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
         <!-- settings for x64 and aarch64 builds on mac, can be ignored for other platforms -->
-        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/18-open</osx.jdk.home.aarch64>
-        <osx.jdk.home.x64>/Users/lad/.sdkman/candidates/java/18.ea.31-open</osx.jdk.home.x64>
+        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/19.ea.20-open</osx.jdk.home.aarch64>
+        <osx.jdk.home.x64>/Users/lad/.sdkman/candidates/java/19.ea.19-open</osx.jdk.home.x64>
     </properties>
 
     <profiles>
@@ -35,8 +35,8 @@
                 </os>
             </activation>
             <properties>
-                <!-- graalvm.home>C:\Program Files\Java\graalvm-ce-java11-22.0.0.2</graalvm.home -->
-                <graalvm.home>C:\Program Files\Java\graalvm-svm-java11-windows-gluon-22.0.0.2-Final</graalvm.home>
+                <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
+                <graalvm.home>C:\Program Files\Java\graalvm-svm-java11-windows-gluon-22.0.0.3-Final</graalvm.home>
                 <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer 18.4\bin\x86\AdvancedInstaller.com</advanced.installer.compiler>
             </properties>
         </profile>
@@ -48,6 +48,7 @@
                 </os>
             </activation>
             <properties>
+                <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
                 <graalvm.home>/Users/lad/bin/graalvm-ce-java11-21.3.0/Contents/Home</graalvm.home>
                 <jdk.home>/will/be/set/in/profiles</jdk.home>
                 <jdk.jlink.binary>${jdk.home}/bin/jlink</jdk.jlink.binary>
