--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
+                <groupId>dev.zio</groupId>
+                <artifactId>zio_${scala.major.version}</artifactId>
+                <version>2.0.2</version>
+            </dependency>
+            <dependency>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-controls</artifactId>
                 <version>${openjfx.version}</version>
