--- a/app/pom.xml
+++ b/app/pom.xml
@@ -15,6 +15,10 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.mkpaz</groupId>
+            <artifactId>atlantafx-base</artifactId>
+        </dependency>
         <!-- needed for Tailer functionality -->
         <dependency>
             <groupId>commons-io</groupId>
