--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,16 @@
 
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.8</scala.version>
-        <openjfx.version>19-ea+9</openjfx.version>
+        <openjfx.version>19</openjfx.version>
         <gluonfx.plugin.version>1.0.14</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <main.class>app.logorrr.LogoRRRApp</main.class>
         <main.launcher.class>app.logorrr.LogoRRRAppLauncher</main.launcher.class>
         <graalvm.log>${project.build.directory}/graal.log</graalvm.log>
         <!-- settings for x64 and aarch64 builds on mac, can be ignored for other platforms -->
-        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/19.ea.34-open</osx.jdk.home.aarch64>
+        <osx.jdk.home.aarch64>/Users/lad/.sdkman/candidates/java/19-zulu</osx.jdk.home.aarch64>
         <osx.jdk.home.x64>/Users/lad/.sdkman/candidates/java/19.ea.19-open</osx.jdk.home.x64>
+        <ikonli.version>12.3.1</ikonli.version>
     </properties>
 
     <profiles>
@@ -117,6 +118,16 @@
                 <groupId>io.github.mkpaz</groupId>
                 <artifactId>atlantafx-base</artifactId>
                 <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kordamp.ikonli</groupId>
+                <artifactId>ikonli-javafx</artifactId>
+                <version>${ikonli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kordamp.ikonli</groupId>
+                <artifactId>ikonli-fontawesome5-pack</artifactId>
+                <version>${ikonli.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
