--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <changelist>-SNAPSHOT</changelist>
 
         <scala.major.version>2.13</scala.major.version>
-        <scala.version>${scala.major.version}.9</scala.version>
+        <scala.version>${scala.major.version}.10</scala.version>
         <openjfx.version>19</openjfx.version>
         <gluonfx.plugin.version>1.0.15</gluonfx.plugin.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
@@ -40,6 +40,24 @@
                 <graalvm.home>C:\Program Files\Java\graalvm-svm-java11-windows-gluon-22.1.0.1-Final</graalvm.home>
                 <!-- see also dist/dist-win/pom.xml! -->
                 <advanced.installer.compiler>C:\Program Files (x86)\Caphyon\Advanced Installer 19.8.1\bin\x86\AdvancedInstaller.com</advanced.installer.compiler>
+            </properties>
+        </profile>
+        <profile>
+            <id>OS.linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>mac os x</name>
+                </os>
+            </activation>
+            <properties>
+                <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
+                <graalvm.home>/Users/lad/bin/graalvm-ce-java11-21.3.0/Contents/Home</graalvm.home>
+                <jdk.home>/will/be/set/in/profiles</jdk.home>
+                <jdk.jlink.binary>${jdk.home}/bin/jlink</jdk.jlink.binary>
+                <jdk.jpackage.binary>${jdk.home}/bin/jpackage</jdk.jpackage.binary>
+                <mac.codesign.binary>/usr/bin/codesign</mac.codesign.binary>
+                <mac.productsign.binary>/usr/bin/productsign</mac.productsign.binary>
             </properties>
         </profile>
         <profile>
